--- a/tasks/install_openjdk.yml
+++ b/tasks/install_openjdk.yml
@@ -69,11 +69,10 @@
     - ansible_os_family == 'Debian'
     - java_open_jdk_version == '11.x' or java_open_jdk_version == '8.x'
 
-- name: Java | Install Java, RedHat
-  yum:
+- name: Java | Install Java, RedHat / CentOS
+  package:
     name: "{{ java_open_jdk_package }}-{{ java_open_jdk_version }}"
     state: present
-    update_cache: true
   until: java_package_installed is succeeded
   register: java_package_installed
   when:
@@ -81,22 +80,30 @@
     - java_open_jdk_version != '11.x'
     - java_open_jdk_version != '8.x'
 
-- name: Java | Install Java, RedHat, latest version
-  yum:
+- name: Java | Install Java, RedHat / CentOS, latest version
+  package:
     name: "{{ java_open_jdk_package }}"
     state: present
-    update_cache: true
   until: java_package_installed is succeeded
   register: java_package_installed
   when:
     - ansible_os_family == 'RedHat'
     - java_open_jdk_version == '11.x' or java_open_jdk_version == '8.x'
 
-- name: Java | Update 'java_open_jdk_home', on RHEL / CentOS, when installing latest major
+- name: Java | Update 'java_open_jdk_home', on RHEL / CentOS 7.6, when installing latest major
   set_fact:
     java_open_jdk_home: "/usr/lib/jvm/java-{{ java_open_jdk_version_major }}-openjdk-{{ java_open_jdk_version_lastest }}-0.el7_6.x86_64"
   when:
     - ansible_os_family == 'RedHat'
+    - ansible_distribution_major_version == '7'
+    - java_open_jdk_version == '11.x' or java_open_jdk_version == '8.x'
+
+- name: Java | Update 'java_open_jdk_home', on RHEL / CentOS 8.0, when installing latest major
+  set_fact:
+    java_open_jdk_home: "/usr/lib/jvm/java-{{ java_open_jdk_version_major }}-openjdk-{{ java_open_jdk_version_lastest }}-0.el8_0.x86_64"
+  when:
+    - ansible_os_family == 'RedHat'
+    - ansible_distribution_major_version == '8'
     - java_open_jdk_version == '11.x' or java_open_jdk_version == '8.x'
 
 - name: Java | Update Env
