--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ env:
 
     - DOCKER_IMAGE_BASE=debian:stretch-slim
       JDK_IMPLEMENTATION=openjdk
-      JDK_VERSION=8u212-b03-2~deb9u1
+      JDK_VERSION=8u222-b10-1~deb9u1
       DOCKER_TAG_TO_PUBLISH=8u212-stretch-${JDK_IMPLEMENTATION}-headless
 
     - DOCKER_IMAGE_BASE=debian:stretch-slim
@@ -111,23 +111,23 @@ env:
       DOCKER_TAG_TO_PUBLISH=11.0.3.7-centos7-${JDK_IMPLEMENTATION}-headless
 
     # RHEL 7/OpenJDK
-    - DOCKER_IMAGE_BASE=registry.redhat.io/ubi7/ubi
+    - DOCKER_IMAGE_BASE=apolloclark/ubi7
       JDK_IMPLEMENTATION=openjdk
       JDK_VERSION=11.x
       DOCKER_TAG_TO_PUBLISH=11-rhel7-${JDK_IMPLEMENTATION}-headless
 
-    - DOCKER_IMAGE_BASE=registry.redhat.io/ubi7/ubi
+    - DOCKER_IMAGE_BASE=apolloclark/ubi7
       JDK_IMPLEMENTATION=openjdk
       JDK_VERSION=11.0.4.11
       DOCKER_TAG_TO_PUBLISH=11.0.4.11-rhel7-${JDK_IMPLEMENTATION}-headless
 
     # RHEL 8/OpenJDK
-    - DOCKER_IMAGE_BASE=registry.redhat.io/ubi8/ubi
+    - DOCKER_IMAGE_BASE=apolloclark/ubi8
       JDK_IMPLEMENTATION=openjdk
       JDK_VERSION=11.x
       DOCKER_TAG_TO_PUBLISH=11-rhel8-${JDK_IMPLEMENTATION}-headless
 
-    - DOCKER_IMAGE_BASE=registry.redhat.io/ubi8/ubi
+    - DOCKER_IMAGE_BASE=apolloclark/ubi8
       JDK_IMPLEMENTATION=openjdk
       JDK_VERSION=11.0.4.11
       DOCKER_TAG_TO_PUBLISH=11.0.4.11-rhel8-${JDK_IMPLEMENTATION}-headless
