--- a/vars/Debian-9.yml
+++ b/vars/Debian-9.yml
@@ -3,7 +3,7 @@
 # Using pattern described in Ansible Best Practices and Conventions (Appendix B), Ansible for Devops (p. 406)
 # https://packages.debian.org/stretch-backports/openjdk-11-jdk-headless
 # https://packages.debian.org/stretch/openjdk-8-jdk-headless
-__java_open_jdk_version: "11.0.4+11-1~deb10u1"
+__java_open_jdk_version: "11.0.4+11-1~bpo9+1"
 
 __java_required_repositories_openjdk:
   - deb http://ftp.debian.org/debian stretch-backports main
