#104 New Debian 9 and Ubuntu 18 OpenJDK package version

--- a/molecule/openjdk/molecule.yml
+++ b/molecule/openjdk/molecule.yml
@@ -12,7 +12,7 @@ platforms:
   - name: openjdk
     groups:
       - openjdk
-    image: ${DOCKER_IMAGE_BASE:-debian:jessie-slim}
+    image: ${DOCKER_IMAGE_BASE:-debian:stretch-slim}
 
 provisioner:
   name: ansible
