--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,8 +3,8 @@ galaxy_info:
   role_name: java_role
   author: idealista
   company: Idealista S.A.U.
-  description: Java role, install openJDK/oracleJDK and set system defaults
-  min_ansible_version: 2.4.5.0
+  description: Java role, install openJDK and set system defaults
+  min_ansible_version: 2.8.4.0
   license: Apache 2.0
   platforms:
     - name: Debian
