--- a/molecule/debian_jessie/verify.yml
+++ b/molecule/debian_jessie/verify.yml
@@ -12,7 +12,7 @@
 - name: Verify
   hosts: all
   vars:
-    goss_version: v0.3.6
+    goss_version: v0.3.7
     goss_arch: amd64
     goss_dst: /usr/local/bin/goss
     goss_url: "https://github.com/aelsabbahy/goss/releases/download/{{ goss_version }}/goss-linux-{{ goss_arch }}"
@@ -20,9 +20,20 @@
     goss_format: documentation
     molecule_file: "{{ lookup('env', 'MOLECULE_FILE') }}"
     molecule_yml: "{{ lookup('file', molecule_file) | molecule_from_yaml }}"
-    java_oracle_jdk_version: "{{ molecule_yml.provisioner.inventory.group_vars.oraclejdk.java_oracle_jdk_version }}"
+    java_open_jdk_version: "{{ molecule_yml.provisioner.inventory.group_vars.openjdk.java_open_jdk_version }}"
+
+  vars_files:
+    - ../../defaults/main.yml
+    - ../../vars/main.yml
+    - ../../vars/{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml
 
   tasks:
+    # Using pattern described in Ansible Best Practices and Conventions (Appendix B), Ansible for Devops (p. 406)
+    # Allowing to 'override' variables that are defined using include_vars
+    - name: Java | Setting OS specific variables
+      set_fact:
+        java_open_jdk_version: "{{ java_open_jdk_version if java_open_jdk_version is defined and java_open_jdk_version|length else __java_open_jdk_version }}"
+
     - name: Download and install goss
       get_url:
         url: "{{ goss_url }}"
