--- a/vars/CentOS-7.yml
+++ b/vars/CentOS-7.yml
@@ -2,11 +2,11 @@
 
 # OpenJDK implementation
 java_open_jdk_package: java-11-openjdk-headless
-java_open_jdk_home_dir: java-{{ java_open_jdk_version_major }}-openjdk-{{ java_open_jdk_version }}-0.el7_6.x86_64
-# java-11-openjdk-11.0.2.7-0.el7_6.x86_64
+java_open_jdk_home_dir: java-{{ java_open_jdk_version_major }}-openjdk-{{ java_open_jdk_version }}-1.el7.x86_64
+# java-11-openjdk-11.0.3.7-0.el7_6.x86_64
 
 # Using pattern described in Ansible Best Practices and Conventions (Appendix B), Ansible for Devops (p. 406)
-__java_open_jdk_version: "11.0.2.7"
+__java_open_jdk_version: "11.0.3.7"
 
 __java_required_repositories_openjdk: []
 __java_required_libs_openjdk: []
