#106 remove scenarios and use DOCKER_IMAGE_BASE as discriminate for scenario

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -23,7 +23,7 @@ provisioner:
   lint:
     name: ansible-lint
 scenario:
-  name: debian_stretch
+  name: default
 verifier:
   name: goss
   lint:
