Needed to install the alternative, but unable to do so as we are missing the link

--- a/tasks/install_openjdk.yml
+++ b/tasks/install_openjdk.yml
@@ -66,6 +66,7 @@
 - name: Java | Update Env
   alternatives:
     name: java
+    link: /usr/bin/java
     path: "{{ java_open_jdk_home }}/bin/java"
 
 - name: Java | Ensure Defaults on etc/alternatives systems
