#120 Updated vars; #107 #114 added support to the latest OS major releases

--- a/vars/Ubuntu-16.yml
+++ b/vars/Ubuntu-16.yml
@@ -1,7 +1,8 @@
 ---
 
 # Using pattern described in Ansible Best Practices and Conventions (Appendix B), Ansible for Devops (p. 406)
-__java_open_jdk_version: "9~b114-0ubuntu1"
+__java_open_jdk_version_major: 9
+# Supported openjdk major releases: 8, 9
 
 __java_required_repositories_openjdk: []
 __java_required_libs_openjdk: []
