--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -3,10 +3,10 @@ dependency:
   name: galaxy
 driver:
   name: docker
-lint:
-  name: yamllint
-  options:
-    config-file: .yamllint
+
+lint: |
+    yamllint .
+    ansible-lint .
 
 platforms:
   - name: openjdk-stretch
@@ -20,11 +20,7 @@ provisioner:
     group_vars:
       openjdk:
         java_open_jdk_version: ${JDK_VERSION}
-  lint:
-    name: ansible-lint
 scenario:
   name: default
 verifier:
-  name: goss
-  lint:
-    name: yamllint
+  name: ansible
