--- a/molecule/default/tests/test_openjdk.yml
+++ b/molecule/default/tests/test_openjdk.yml
@@ -1,15 +1,16 @@
 ---
 
 file:
-  {{ java_open_jdk_home }}:
+  {{ java_open_jdk_home }}/lib:
     exists: true
     filetype: directory
-  {{ java_open_jdk_default_java_home }}:
-    exists: true
-    filetype: symlink
-
 package:
+{% if java_open_jdk_version is defined and java_open_jdk_version is not sameas None and java_open_jdk_version != "" %}
   {{ java_open_jdk_package }}:
       installed: true
       versions:
         - {{ java_open_jdk_version }}
+{% else %}
+  {{ java_open_jdk_package }}:
+      installed: true
+{% endif %}
