--- a/meta/main.yml
+++ b/meta/main.yml
@@ -11,10 +11,13 @@ galaxy_info:
       versions:
         - jessie
         - stretch
+        - buster
     - name: Ubuntu
       versions:
         - xenial
         - bionic
+        - focal
     - name: EL
       versions:
         - 7
+        - 8
