--- a/tasks/install_openjdk.yml
+++ b/tasks/install_openjdk.yml
@@ -7,14 +7,28 @@
 
 # Using pattern described in Ansible Best Practices and Conventions (Appendix B), Ansible for Devops (p. 406)
 # Allowing to 'override' variables that are defined using include_vars
-- name: Java | Setting OS specific variables
+- name: Java | Setting OS specific variables (I)
   set_fact:
     java_open_jdk_version_major: "{{ java_open_jdk_version_major if java_open_jdk_version_major is defined and java_open_jdk_version_major is not sameas None and java_open_jdk_version_major else __java_open_jdk_version_major }}"  # noqa 204
     java_required_repositories_openjdk: "{{ java_required_repositories_openjdk if java_required_repositories_openjdk is defined and java_required_repositories_openjdk is not sameas None and java_required_repositories_openjdk|length else __java_required_repositories_openjdk }}"  # noqa 204
+    java_required_key_repositories_openjdk: "{{ java_required_key_repositories_openjdk if java_required_key_repositories_openjdk is defined and java_required_key_repositories_openjdk is not sameas None and java_required_key_repositories_openjdk|length  else __java_required_key_repositories_openjdk }}"  # noqa 204
     java_required_libs_openjdk: "{{ java_required_libs_openjdk if java_required_libs_openjdk is defined and java_required_libs_openjdk is not sameas None and java_required_libs_openjdk|length else __java_required_libs_openjdk }}"  # noqa 204
-- name: Java | Setting OS specific variables
+
+- name: Java | Setting OS specific variables (II)
+  set_fact:
+    java_open_jdk_home_dir: "{{ java_open_jdk_home_dir if java_open_jdk_home_dir is defined and java_open_jdk_home_dir is not sameas None and java_open_jdk_home_dir else __java_open_jdk_home_dir }}"  # noqa 204
+    java_open_jdk_package: "{{ java_open_jdk_package if java_open_jdk_package is defined and java_open_jdk_package is not sameas None and java_open_jdk_package else __java_open_jdk_package }}"  # noqa 204
+
+- name: Java | Setting specific variables
   set_fact:
     java_home: "{{ java_open_jdk_home }}"
+
+- name: Java | Install required libs
+  package:
+    name: "{{ java_required_libs_openjdk }}"
+    state: present
+  until: java_required_libs_installed is succeeded
+  register: java_required_libs_installed
 
 # Explanation why:
 # https://www.lucas-nussbaum.net/blog/?p=947
@@ -28,20 +42,34 @@
     - ansible_os_family == 'Debian'
     - ansible_distribution_major_version == '8'
 
-- name: Java | Add required repositories, Debian
-  apt_repository:
-    repo: "{{ item }}"
-    state: present
-    update_cache: true
-  with_items: "{{ java_required_repositories_openjdk }}"
+- block:
+    - name: java | add required key repositories, Debian
+      apt_key:
+        url: "{{ item }}"
+        state: present
+      with_items: "{{ java_required_key_repositories_openjdk }}"
+    - name: java | add required repositories, Debian
+      apt_repository:
+        repo: "{{ item }}"
+        state: present
+      with_items: "{{ java_required_repositories_openjdk }}"
   when: ansible_os_family == 'Debian'
 
-- name: Java | Install required libs
-  package:
-    name: "{{ java_required_libs_openjdk }}"
-    state: present
-  until: java_required_libs_installed is succeeded
-  register: java_required_libs_installed
+- block:
+    - name: java | add required key repositories, RedHat
+      rpm_key:
+        key: "{{ item }}"
+        state: present
+      with_items: "{{ java_required_key_repositories_openjdk }}"
+    - name: java | add required repositories, RedHat
+      yum_repository:
+        name: "{{ item.name }}"
+        description: OpenJDK YUM alt repo
+        file: "{{ item.name }}.repo"
+        baseurl: "{{ item.baseurl }}"
+        gpgcheck: true
+      with_items: "{{ java_required_repositories_openjdk }}"
+  when: ansible_os_family == 'RedHat'
 
 - name: Java | Install Java, Debian
   apt:
