--- a/vars/Debian-10.yml
+++ b/vars/Debian-10.yml
@@ -1,11 +1,12 @@
 ---
 
-java_open_jdk_package: "openjdk-{{ java_open_jdk_version_major }}-jdk-headless"
-java_open_jdk_home_dir: "java-{{ java_open_jdk_version_major }}-openjdk-amd64"
-
 # Using pattern described in Ansible Best Practices and Conventions (Appendix B), Ansible for Devops (p. 406)
 __java_open_jdk_version_major: 11
 # Supported openjdk major releases: 11
 
 __java_required_repositories_openjdk: []
 __java_required_libs_openjdk: []
+__java_required_key_repositories_openjdk: []
+
+__java_open_jdk_package: openjdk-{{ java_open_jdk_version_major }}-jdk-headless
+__java_open_jdk_home_dir: java-{{ java_open_jdk_version_major }}-openjdk-amd64
