--- a/vars/Debian-9.yml
+++ b/vars/Debian-9.yml
@@ -1,8 +1,5 @@
 ---
 
-java_open_jdk_package: "openjdk-{{ java_open_jdk_version_major }}-jdk-headless"
-java_open_jdk_home_dir: "java-{{ java_open_jdk_version_major }}-openjdk-amd64"
-
 # Using pattern described in Ansible Best Practices and Conventions (Appendix B), Ansible for Devops (p. 406)
 __java_open_jdk_version_major: 8
 # Supported openjdk major releases: 8 via oldstable, 11 via backports
@@ -10,3 +7,7 @@ __java_open_jdk_version_major: 8
 __java_required_repositories_openjdk:
   - deb http://ftp.debian.org/debian stretch-backports main
 __java_required_libs_openjdk: []
+__java_required_key_repositories_openjdk: []
+
+__java_open_jdk_package: openjdk-{{ java_open_jdk_version_major }}-jdk-headless
+__java_open_jdk_home_dir: java-{{ java_open_jdk_version_major }}-openjdk-amd64
