--- a/vars/Ubuntu-16.yml
+++ b/vars/Ubuntu-16.yml
@@ -6,3 +6,7 @@ __java_open_jdk_version_major: 9
 
 __java_required_repositories_openjdk: []
 __java_required_libs_openjdk: []
+__java_required_key_repositories_openjdk: []
+
+__java_open_jdk_package: openjdk-{{ java_open_jdk_version_major }}-jdk-headless
+__java_open_jdk_home_dir: java-{{ java_open_jdk_version_major }}-openjdk-amd64
