--- a/vars/Ubuntu-20.yml
+++ b/vars/Ubuntu-20.yml
@@ -8,3 +8,7 @@ __java_open_jdk_version_major: 14
 __java_required_repositories_openjdk:
   - "ppa:openjdk-r/ppa"
 __java_required_libs_openjdk: []
+__java_required_key_repositories_openjdk: []
+
+__java_open_jdk_package: openjdk-{{ java_open_jdk_version_major }}-jdk-headless
+__java_open_jdk_home_dir: java-{{ java_open_jdk_version_major }}-openjdk-amd64
