#39 rename apt tools var

--- a/molecule/adoptopenjdk/group_vars/openjdk/main.yml
+++ b/molecule/adoptopenjdk/group_vars/openjdk/main.yml
@@ -1,5 +1,5 @@
 ---
-apt_extra_packages:
+java_open_jdk_apt_extra_packages:
   - python-apt
   - apt-transport-https
 java_open_jdk_version_major: 8
