--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,7 +2,7 @@
 
 # Choosen platform
 # [openjdk, oraclejdk]
-java_implementation: oraclejdk
+java_implementation: openjdk
 
 # OracleJDK implementation (provides only support for x64 architectures)
 # [1.8.0_201, 1.8.0_202, 11.0.2] (see available urls in ../group_vars/main.yml)
@@ -14,7 +14,6 @@ java_open_jdk_package: openjdk-{{ java_open_jdk_version_major }}-jdk-headless
 java_open_jdk_home_dir: java-{{ java_open_jdk_version_major }}-openjdk-amd64
 java_open_jdk_home: /usr/lib/jvm/{{ java_open_jdk_home_dir }}
 java_open_jdk_default_java_home: /usr/lib/jvm/default-java
-JDK_VERSION: "{{ java_oracle_jdk_version }}"
 
 java_open_jdk_version_major: "{{ java_open_jdk_version | regex_search('^([0-9]{1,2})') }}"
 
