Fixed version in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -141,7 +141,7 @@ env:
 
     - DOCKER_IMAGE_BASE=amd64/ubuntu:xenial 
       JDK_IMPLEMENTATION=oraclejdk 
-      JDK_VERSION=11.0.
+      JDK_VERSION=11.0.2
       DOCKER_TAG_TO_PUBLISH=${JDK_VERSION}-xenial-${JDK_IMPLEMENTATION}
 
 script:
