#132 Debian Buster by default in molecule tests

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -12,7 +12,7 @@ platforms:
   - name: openjdktest
     groups:
       - openjdk
-    image: ${DOCKER_IMAGE_BASE:-debian:stretch-slim}
+    image: ${DOCKER_IMAGE_BASE:-debian:buster-slim}
 
 provisioner:
   name: ansible
