--- a/.travis.yml
+++ b/.travis.yml
@@ -21,18 +21,18 @@ env:
   - DOCKER_IMAGE_BASE=debian:stretch-slim JDK_MAJOR=8 JDK_VERSION=8u252-b09-1~deb9u1 DOCKER_TAG_TO_PUBLISH=8u252-stretch-openjdk-headless
   - DOCKER_IMAGE_BASE=debian:stretch-slim JDK_MAJOR=11 JDK_VERSION=11.0.6+10-1~bpo9+1 DOCKER_TAG_TO_PUBLISH=11.0.6-stretch-openjdk-headless
   - DOCKER_IMAGE_BASE=debian:buster-slim DOCKER_TAG_TO_PUBLISH=11-buster-openjdk-headless
-  - DOCKER_IMAGE_BASE=debian:buster-slim JDK_MAJOR=11 JDK_VERSION=11.0.7+10-3~deb10u1 DOCKER_TAG_TO_PUBLISH=11.0.7-buster-openjdk-headless
+  - DOCKER_IMAGE_BASE=debian:buster-slim JDK_MAJOR=11 JDK_VERSION=11.0.8+10-1~deb10u1 DOCKER_TAG_TO_PUBLISH=11.0.8-buster-openjdk-headless
   - DOCKER_IMAGE_BASE=amd64/ubuntu:xenial DOCKER_TAG_TO_PUBLISH=9-xenial-openjdk-headless
-  - DOCKER_IMAGE_BASE=amd64/ubuntu:xenial JDK_MAJOR=8 JDK_VERSION=8u252-b09-1~16.04 DOCKER_TAG_TO_PUBLISH=8u252-xenial-openjdk-headless
+  - DOCKER_IMAGE_BASE=amd64/ubuntu:xenial JDK_MAJOR=8 JDK_VERSION=8u265-b01-0ubuntu2~16.04 DOCKER_TAG_TO_PUBLISH=8u265-xenial-openjdk-headless
   - DOCKER_IMAGE_BASE=amd64/ubuntu:xenial JDK_MAJOR=9 JDK_VERSION=9~b114-0ubuntu1 DOCKER_TAG_TO_PUBLISH=9b114-xenial-openjdk-headless
   - DOCKER_IMAGE_BASE=amd64/ubuntu:bionic DOCKER_TAG_TO_PUBLISH=11-bionic-openjdk-headless
-  - DOCKER_IMAGE_BASE=amd64/ubuntu:bionic JDK_MAJOR=11 JDK_VERSION=11.0.7+10-2ubuntu2~18.04 DOCKER_TAG_TO_PUBLISH=11.0.7-bionic-openjdk-headless
-  - DOCKER_IMAGE_BASE=amd64/ubuntu:bionic JDK_MAJOR=8 JDK_VERSION=8u252-b09-1~18.04 DOCKER_TAG_TO_PUBLISH=8u252-bionic-openjdk-headless
+  - DOCKER_IMAGE_BASE=amd64/ubuntu:bionic JDK_MAJOR=11 JDK_VERSION=11.0.8+10-0ubuntu1~18.04.1 DOCKER_TAG_TO_PUBLISH=11.0.8-bionic-openjdk-headless
+  - DOCKER_IMAGE_BASE=amd64/ubuntu:bionic JDK_MAJOR=8 JDK_VERSION=8u265-b01-0ubuntu2~18.04 DOCKER_TAG_TO_PUBLISH=8u265-bionic-openjdk-headless
   - DOCKER_IMAGE_BASE=amd64/ubuntu:focal DOCKER_TAG_TO_PUBLISH=14-focal-openjdk-headless
   - DOCKER_IMAGE_BASE=amd64/ubuntu:focal JDK_MAJOR=14 JDK_VERSION=14.0.1+7-1ubuntu1 DOCKER_TAG_TO_PUBLISH=14.0.1-focal-openjdk-headless
-  - DOCKER_IMAGE_BASE=amd64/ubuntu:focal JDK_MAJOR=8 JDK_VERSION=8u252-b09-1ubuntu1 DOCKER_TAG_TO_PUBLISH=8u252-focal-openjdk-headless
-  - DOCKER_IMAGE_BASE=centos:7 JDK_MAJOR=11 JDK_VERSION=11.0.7.10 DOCKER_TAG_TO_PUBLISH=11.0.7.10-centos7-openjdk-headless
-  - DOCKER_IMAGE_BASE=centos:8 JDK_MAJOR=11 JDK_VERSION=11.0.7.10 DOCKER_TAG_TO_PUBLISH=11.0.7.10-centos8-openjdk-headless
+  - DOCKER_IMAGE_BASE=amd64/ubuntu:focal JDK_MAJOR=8 JDK_VERSION=8u265-b01-0ubuntu2~20.04 DOCKER_TAG_TO_PUBLISH=8u265-focal-openjdk-headless
+  - DOCKER_IMAGE_BASE=centos:7 JDK_MAJOR=11 JDK_VERSION=11.0.8.10 DOCKER_TAG_TO_PUBLISH=11.0.8.10-centos7-openjdk-headless
+  - DOCKER_IMAGE_BASE=centos:8 JDK_MAJOR=11 JDK_VERSION=11.0.8.10 DOCKER_TAG_TO_PUBLISH=11.0.8.10-centos8-openjdk-headless
 script:
 - pipenv run molecule test
 notifications:
