--- a/molecule/corretto/verify.yml
+++ b/molecule/corretto/verify.yml
@@ -39,12 +39,14 @@
     - name: Register test files
       shell: "ls {{ goss_test_directory }}/test_*.yml"
       register: test_files
+      changed_when: false
 
     - name: Execute Goss tests
       command: "goss -g {{ item }} validate --format {{ goss_format }}"
       register: test_results
       with_items: "{{ test_files.stdout_lines }}"
       ignore_errors: true
+      changed_when: false
 
     - name: Display details about the goss results
       debug:
