--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -27,12 +27,12 @@
 
   tasks:
     - name: Java | Gather OS specific variables
-      include_vars: "../../vars/{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
+      include_vars: "../../vars/os-distributions/{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
     # Using pattern described in Ansible Best Practices and Conventions (Appendix B), Ansible for Devops (p. 406)
     # Allowing to 'override' variables that are defined using include_vars
 
     - name: Java | Gather JDK build variables
-      include_vars: "../../vars/{{ jdk_build }}.yml"
+      include_vars: "../../vars/jdk-builds/{{ jdk_build }}.yml"
 
     - name: Java | Setting OS specific variables
       set_fact:
