--- a/tasks/install_openjdk.yml
+++ b/tasks/install_openjdk.yml
@@ -8,7 +8,7 @@
 - name: Java | Gather JDK build specific variables
   include_vars: "{{ item }}"
   with_first_found:
-    - "jdk-builds/{{ jdk_build }}.yml"
+    - "jdk-builds/{{ java_jdk_vendor }}.yml"
 
 # Using pattern described in Ansible Best Practices and Conventions (Appendix B), Ansible for Devops (p. 406)
 # Allowing to 'override' variables that are defined using include_vars
