--- a/molecule/adoptopenjdk/molecule.yml
+++ b/molecule/adoptopenjdk/molecule.yml
@@ -17,8 +17,13 @@ platforms:
 provisioner:
   name: ansible
   inventory:
-    links:
-      group_vars: ./group_vars
+    group_vars:
+      openjdk:
+        java_open_jdk_home: /usr/lib/jvm/{{ java_open_jdk_home_dir }}
+        java_jdk_vendor: adoptopenjdk
+        java_open_jdk_version: ${JDK_VERSION}
+        java_open_jdk_version_major: ${JDK_MAJOR}
+
 scenario:
   name: adoptopenjdk
 verifier:
